# mobile-robots

./: README.md
assignment0-handout/: README.md  handin.tar  pyproject.toml
assignment0-handout/quadrotor_simulator_py/utils/: rotation3.py
assignment1-handout/: COMPUTATIONAL_FIXES.md  IMPLEMENTATION_LOG.md  RPM_CONFIG_CONSIDERATIONS.md  USEFUL_EQ.md  handin.tar  main.py  pyproject.toml  setup.py
assignment1-handout/quadrotor_simulator_py/quadrotor_control/: attitudepd.py  positionpd.py
assignment1-handout/quadrotor_simulator_py/quadrotor_model/: mixer.py  model.py
assignment1-handout/quadrotor_simulator_py/utils/: geometry.py  pose.py
assignment2-handout/: MAP_TOOLS.md  SENSOR_INTEGRATION.md  handin.tar  main.py  pyproject.toml
assignment2-handout/quadrotor_simulator_py/map_tools/: occupancy_grid.py
assignment2-handout/quadrotor_simulator_py/sensor_simulator/: sensor_simulator.py
assignment2-handout/quadrotor_simulator_py/utils/: transforms.py
assignment3-handout/: pyproject.toml
