[project]
name = "assignment1-handout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <=3.9"
dependencies = [
    "gdown>=5.2.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
]
