[project]
name = "assignment2-handout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy==1.24",
    "open3d>=0.19.0",
    "opencv-python>=4.8.1.78",
    "plyfile>=1.1.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]
